--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -93,7 +93,7 @@ nav li:first-child{
     margin-top: 10px;
 }
 
-.card{
+/*.card{
     margin-top: 30px;
     display: flex;
     justify-content: center;
@@ -101,7 +101,7 @@ nav li:first-child{
 }
 
 .card-content
-
+*/
 .boxes{
     margin-top: 40px;
     display: flex;
