--- a/Engelsk Nettside 23.9.2024/CSS/Styles.css
+++ b/Engelsk Nettside 23.9.2024/CSS/Styles.css
@@ -5,5 +5,48 @@
 }
 
 body{
-    background-color: #333;
+    min-height: 100vh;
+    background-image: url(../Bilder/visiter-death-valley-national-park.jpg);
+    background-size: cover; /* Fikserer bildet i midten av siden*/
+    background-repeat: no-repeat;
+    background-position: center;
+    font-family: "Nunito", sans-serif;
+}
+
+nav{
+    background: white;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    padding-right: 30px;
+}
+
+nav ul{
+    width: 100%; /* Lengden på nav linjen*/
+    /*Flexbox shinanigans*/
+    list-style: none; 
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+nav li{
+    height: 74px;
+}
+
+nav a{
+    font-size: 1.4rem;
+    text-decoration: none;
+    padding: 0 30px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    color: black;
+}
+
+nav a:hover{
+    background-color: lightgray;
+}
+
+nav li:first-child{
+    margin-right: auto;
 }
