--- a/Min Side/CSS/Styles.css
+++ b/Min Side/CSS/Styles.css
@@ -20,17 +20,22 @@ body{
 nav{
     background-color: white;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1); /* Skygge på navigasjons linjen*/
+    padding-right: 10px;
 }
 
 nav ul{
     width: 100%; /* Lengden på nav linjen*/
-
+    position: relative;
     /*Flexbox shinanigans*/
     list-style: none; 
     display: flex;
     justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap;
+}
+
+nav ul li{
+    position: relative;
 }
 
 /* Høyden på nav linkene. Ikke satt høyde på nav ul og nav fordi jeg vil at nav li skal definere høyden på de*/
@@ -56,10 +61,6 @@ nav a:hover{
 
 nav li:first-child{
     margin-right: auto; /* Flyter den første item i listen til venstre hjørne*/ 
-}
-
-nav li:first-child img{
-    
 }
 
 /*Hvis vindu mindre en px holder hero avstand fra kantene på vinduet*/
@@ -157,3 +158,31 @@ nav li:first-child img{
     padding: 10px;
     font-size: 1.4rem;
 }
+
+
+/*Dropdown menu*/
+
+nav ul li .dropdown{
+    display: none;
+    position: absolute;
+    background-color: white;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li:hover .dropdown{
+    display: block;
+}
+
+nav ul li .dropdown li{
+    padding: 3px 3px;
+    white-space: nowrap;
+}
+
+nav ul li .dropdown li a{
+    color: black;
+    text-decoration: none;
+}
+
