--- a/Min Side/CSS/Om MegStyles.css
+++ b/Min Side/CSS/Om MegStyles.css
@@ -9,7 +9,7 @@
 
 body{
     min-height: 100vh;
-    background-image: url(../Bilder/wood-3346811_1920.jpg);
+    background-image: url(../Bilder/httpspixabay.comillustrationsbackground-pink-blue-gradient.jpg);
     background-size: cover; /* Fikserer bildet i midten av siden*/
     background-repeat: no-repeat;
     background-position: center;
