--- a/Min Side/CSS/ProsjekterStyles.css
+++ b/Min Side/CSS/ProsjekterStyles.css
@@ -141,40 +141,81 @@ nav ul li .dropdown li a{
 .pl{
     border-top: 1px solid rgba(255, 255, 255, 0.4);
     border-left: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.058);
+    box-shadow: 3px 3px 3px rgba(0,0,0,0.09);
+
     height: 500px;
-    width: 400px;
+    width: 450px;
     border-radius: 15px;
+    backdrop-filter: blur(8px);
+
 }
 
 .pl-content{
+    display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    margin-top: 10px;
+    color: white;
 }
+
+.pl-content img{
+    display: inline-block;
+    min-width: 380px;
+    max-height: 200px;
+    margin: 10px;
+    border: 2px solid white;
+    transition: filter 0.5s ease;
+    filter: blur(2px);
+    overflow: hidden;
+}
+
+.pl-content img:hover{
+    filter: blur(0px);
+}
+
 
 .pm{
     border-top: 1px solid rgba(255, 255, 255, 0.4);
     border-left: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.058);
+    box-shadow: 3px 3px 3px rgba(0,0,0,0.09);
+    backdrop-filter: blur(8px);
+ 
     height: 500px;
-    width: 400px;
+    width: 450px;
     border-radius: 15px
 }
 
 .pm-content{
+    display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    margin-top: 10px;
+    color: white;
 }
 
 .pr{
     border-top: 1px solid rgba(255, 255, 255, 0.4);
     border-left: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 3px 3px 3px rgba(0,0,0,0.09);
+    background-color: rgba(255, 255, 255, 0.058);
+    backdrop-filter: blur(8px);
+
     height: 500px;
-    width: 400px;
+    width: 450px;
     border-radius: 15px
 }
 
 .pr-content{
+    display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    margin-top: 10px;
+    color: white;
 }
 
 
