--- a/Min Side/CSS/ProsjekterStyles.css
+++ b/Min Side/CSS/ProsjekterStyles.css
@@ -125,17 +125,23 @@ nav ul li .dropdown li a{
 }
 
 
+.header{
+    display: flex;
+    justify-content: flex-start;
+    margin: 30px;
+}
+
 .header-box{
-    background: linear-gradient(to right, rgba(#2c3e50, 0.5), rgba(#CC3355, 0.051)) ;
+    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.05));
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.09);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(8px);
     border-radius: 5px;
     position: relative;
     display: flex;
-    margin: 50px;
     width: 700px;
-    height: 400px;
-    padding: 10px;
+    height: 200px;
 
 }
 
@@ -143,11 +149,14 @@ nav ul li .dropdown li a{
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
+    margin: 10px;
     color: white;
+    font-size: 1.4rem;
 
 }
 
 .header-content h1{
+    margin-bottom: 10px;
     font-size: 2.3rem;
 }
 
