--- a/Engelsk Nettside/CSS/Styles.css
+++ b/Engelsk Nettside/CSS/Styles.css
@@ -6,7 +6,7 @@
 
 body{
     min-height: 100vh;
-    background-image: url(../Bilder/visiter-death-valley-national-park.jpg);
+    background-image: url(../Bilder/gray-texture.jpg);
     background-size: cover; /* Fikserer bildet i midten av siden*/
     background-repeat: no-repeat;
     background-position: center;
@@ -14,26 +14,34 @@ body{
 }
 
 nav{
-    background: white;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
-    padding-right: 30px;
+    width: 70%;
+    margin: 0 auto;
+    margin-bottom: 50px;
 }
 
 nav ul{
     width: 100%; /* Lengden på nav linjen*/
+    margin-top: 10px;
+    gap: 40px;
     /*Flexbox shinanigans*/
     list-style: none; 
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    flex-wrap: wrap;
+    justify-content: center;
+    flex-wrap: nowrap;
+    letter-spacing: 1.5px;
 }
 
 nav li{
+    position: relative;
     height: 74px;
+    overflow: hidden;
+    cursor: pointer;
+
 }
 
 nav a{
+    position: relative;
+    transition: all 0.45s ease-in-out;
     font-size: 1.4rem;
     text-decoration: none;
     padding: 0 30px;
@@ -44,11 +52,24 @@ nav a{
 }
 
 nav a:hover{
-    background-color: lightgray;
+    backdrop-filter: blur(2px);
 }
 
-nav li:first-child{
-    margin-right: auto;
+nav li .underline{
+    width: 100%;
+    height: 2.5px;
+    background: #BFC0C0;
+    position: absolute;
+    left: 0;
+    bottom: 10px;
+
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.3s ease-out;
+}
+
+nav li:hover .underline{
+    transform: scaleX(1);
 }
 
 
@@ -61,4 +82,22 @@ head{
 .hero-card{
     display: flex;
     justify-content: center;
+}
+
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 12px;
+    padding: 10px;
+    z-index: 5;
+}
+
+.flatart-link a{
+    color: turquoise;
+}
+footer li{
+    color: white;
+    display: flex;
+    margin-right: auto;
+    text-decoration: underline;
 }
