--- a/Engelsk Nettside/CSS/Styles.css
+++ b/Engelsk Nettside/CSS/Styles.css
@@ -17,6 +17,9 @@ nav{
     width: 70%;
     margin: 0 auto;
     margin-bottom: 50px;
+    position: sticky;
+    top: 0;
+    z-index: 5;
 }
 
 nav ul{
@@ -58,7 +61,7 @@ nav a:hover{
 nav li .underline{
     width: 100%;
     height: 2.5px;
-    background: #BFC0C0;
+    background: rgba(191, 192, 192, 0.5);
     position: absolute;
     left: 0;
     bottom: 10px;
