--- a/Engelsk Nettside/CSS/Styles.css
+++ b/Engelsk Nettside/CSS/Styles.css
@@ -14,17 +14,17 @@ body{
 }
 
 nav{
-    width: 70%;
+    width: 100%;
     margin: 0 auto;
-    margin-bottom: 50px;
     position: sticky;
     top: 0;
     z-index: 5;
+    background-color: white;
+    box-shadow: 3px 3px 3px solid rgba(0, 0, 0, 0.3);
 }
 
 nav ul{
     width: 100%; /* Lengden på nav linjen*/
-    margin-top: 10px;
     gap: 40px;
     /*Flexbox shinanigans*/
     list-style: none; 
@@ -76,16 +76,64 @@ nav li:hover .underline{
 }
 
 
-head{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+ 
+.startimage{
+    position: relative;
+}
+.startimage img{
+    max-width: 100%;
+    max-height: 100%;
+    z-index: 0;
+    display: block;
+    overflow: hidden;
+
 }
 
-.hero-card{
+.hero-parent{
     display: flex;
     justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 180px;
+    right: 60%;
+
+
 }
+
+.hero-container{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 600px;
+    height: auto;
+    background-color: rgba(255, 255, 255, 0.6);
+    box-shadow: 4px 4px 4px solid rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(2px);
+    border-radius: 10px;
+
+}
+
+.hero-content{
+    margin: 35px;
+    color: rgb(0, 85, 140);
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.hero-content p{
+    margin: 20px;
+}
+
+#hero-button{
+    height: 60px;
+    width: 250px;
+    border-radius: 50px;
+    background-color: rgb(52, 196, 112);
+    font-size: 1.8rem;
+}
+
+
+
 
 footer{
     position: fixed;
