--- a/Engelsk Nettside/CSS/Plan Your Trip.css
+++ b/Engelsk Nettside/CSS/Plan Your Trip.css
@@ -65,7 +65,6 @@ nav li .underline{
     position: absolute;
     left: 0;
     bottom: 10px;
-
     transform: scaleX(0);
     transform-origin: center;
     transition: transform 0.3s ease-out;
@@ -79,67 +78,68 @@ nav li .solid-underline{
     bottom: 10px;
 }
 
+
 nav li:hover .underline{
     transform: scaleX(1);
 }
 
 
- 
-.startimage{
-    position: relative;
-}
-.startimage img{
-    max-width: 100%;
-    max-height: 100%;
-    z-index: 0;
-    display: block;
-    overflow: hidden;
 
-}
-
-.hero-parent{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 180px;
-    right: 60%;
-
-
-}
-
-.hero-container{
+.hero{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    width: 600px;
-    height: auto;
-    background-color: rgba(255, 255, 255, 0.6);
-    box-shadow: 4px 4px 4px solid rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(2px);
-    border-radius: 10px;
-
+    position: relative;
 }
+
+
+.hero-card{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 650px;
+    height: 200px;
+    background-color: rgba(158, 217, 240, 0.8);
+    background-image: linear-gradient(to bottom right, rgba(158, 217, 240, 0.8), rgba(234, 58, 158, 0.5));
+    box-shadow: 3px 3px 5px solid rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    margin-top: 100px;
+    border-radius: 10px;
+    position: absolute;
+}
+
 
 .hero-content{
-    margin: 35px;
-    color: rgb(0, 85, 140);
-    font-weight: bold;
-    font-size: 30px;
-}
-
-.hero-content p{
-    margin: 20px;
-}
-
-#hero-button{
-    height: 60px;
-    width: 250px;
-    border-radius: 50px;
-    background-color: rgb(52, 196, 112);
-    font-size: 1.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 2.3rem;
+    flex-direction: column;
 }
 
 
+.hero-content h2{
+    font-size: 2rem;
+    margin-top: 20px;
+    letter-spacing: -1.5px;
+}
 
 
+.hero img{
+    position: relative;
+    top: 0;
+    z-index: -1;
+}
+
+.Places-top{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.Places-Container-1{
+    width: 100%;
+    height: 500px;
+    background-color: white;
+}
