--- a/Min Side/CSS/ProsjekterStyles.css
+++ b/Min Side/CSS/ProsjekterStyles.css
@@ -16,6 +16,7 @@ body{
 nav{
     padding-right: 10px;
     backdrop-filter: blur(4px);
+
 }
 
 nav ul{
@@ -61,7 +62,7 @@ nav li:first-child{
 }
 
 
-
+/*
 @media only screen and (max-width: 636px) {
 
     nav ul {
@@ -84,7 +85,7 @@ nav li:first-child{
     }
     
 }
-
+*/
 @media only screen and (max-width: 920px) {
 
     .Prosjekt-Top{
@@ -105,7 +106,7 @@ nav ul li .dropdown{
     list-style: none;
     padding: 0;
     margin: 0;
-    z-index: 1;
+    z-index: 2;
     backdrop-filter: blur(4px);
 }
 
@@ -127,7 +128,7 @@ nav ul li .dropdown li a{
 
 .header{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 30px;
 }
 
@@ -137,7 +138,7 @@ nav ul li .dropdown li a{
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(8px);
-    border-radius: 5px;
+    border-radius: 5px;   
     position: relative;
     display: flex;
     width: 700px;
@@ -166,21 +167,22 @@ nav ul li .dropdown li a{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 100px;
+    margin: 70px;
     margin-top: 40px;
     padding: 20px;
 }
 
 .Project-box{
-    border-top: 1px solid rgba(255, 255, 255, 0.4);
-    border-left: 1px solid rgba(255, 255, 255, 0.3);
+    border-top: 2px solid rgba(255, 255, 255, 0.4);
+    border-left: 2px solid rgba(255, 255, 255, 0.3);
     background-color: rgba(255, 255, 255, 0.058);
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.09);
     backdrop-filter: blur(8px);
-    height: 480px;
-    width: 450px;
+    height: 450px;
+    width: 420px;
     border-radius: 15px;
     margin-bottom: 25px;
+    gap: 10px;
 }
 
 .Project-content{
@@ -199,13 +201,15 @@ nav ul li .dropdown li a{
     margin: 20px;
     margin-bottom: 10px;
     border: 2px solid white;
+    border-radius: 1px;
     transition: filter 0.5s ease;
     filter: blur(2px); 
+
 }
 
 
 .Project-content img:hover{
-    filter: blur(0px)
+    filter: blur(0px);
 }
 
 .Project-box.z-index-low{
