--- a/Engelsk Nettside/CSS/Plan Your Trip.css
+++ b/Engelsk Nettside/CSS/Plan Your Trip.css
@@ -6,10 +6,7 @@
 
 body{
     min-height: 100vh;
-    background-image: url(../Bilder/gray-texture.jpg);
-    background-size: cover; /* Fikserer bildet i midten av siden*/
-    background-repeat: no-repeat;
-    background-position: center;
+    background-color: white;
     font-family: "Nunito", sans-serif;
 }
 
@@ -102,7 +99,6 @@ nav li:hover .underline{
     background-color: rgba(158, 217, 240, 0.8);
     background-image: linear-gradient(to bottom right, rgba(158, 217, 240, 0.8), rgba(234, 58, 158, 0.5));
     box-shadow: 3px 3px 5px solid rgba(0, 0, 0, 0.3);
-    padding: 10px;
     margin-top: 100px;
     border-radius: 10px;
     position: absolute;
@@ -116,6 +112,7 @@ nav li:hover .underline{
     color: white;
     font-size: 2.3rem;
     flex-direction: column;
+    padding: 15px;
 }
 
 
@@ -127,6 +124,7 @@ nav li:hover .underline{
 
 
 .hero img{
+    display: block;
     position: relative;
     top: 0;
     z-index: -1;
@@ -135,11 +133,31 @@ nav li:hover .underline{
 .Places-top{
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    position: relative;
+    top: -50px;
 }
 
-.Places-Container-1{
+.Places-container-1{
     width: 100%;
-    height: 500px;
-    background-color: white;
+    height: auto;
+    margin: 0 auto;
+    font-size: 2.4rem;
+    background-color: rgb(154, 247, 255);
+    background-image: linear-gradient(to bottom, rgba(240, 122, 122, 0.67), rgba(161, 210, 255, 0.325));
+    display: flex;
+    justify-content: center;
+
+}
+.Places-coantainer-1-content{
+    margin-top: 20px;
+    display: flex;
+
+
+}
+
+
+.box-content{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
 }
