--- a/Engelsk Nettside/CSS/Plan Your Trip.css
+++ b/Engelsk Nettside/CSS/Plan Your Trip.css
@@ -94,12 +94,15 @@ nav li:hover .underline{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    width: 650px;
-    height: 200px;
-    background-color: rgba(158, 217, 240, 0.8);
-    background-image: linear-gradient(to bottom right, rgba(158, 217, 240, 0.8), rgba(234, 58, 158, 0.5));
-    box-shadow: 3px 3px 5px solid rgba(0, 0, 0, 0.3);
+    width: auto;
+    height: auto;
+    border-top: 1px solid rgba(205, 213, 255, 0.4);
+    border-left: 1px solid rgba(189, 205, 255, 0.3);
+    background-image: linear-gradient(to bottom right, rgba(21, 0, 212, 0.5), rgba(202, 35, 207, 0.3));
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.09);
+    backdrop-filter: blur(8px);
     margin-top: 100px;
+    padding: 40px;
     border-radius: 10px;
     position: absolute;
 }
@@ -109,7 +112,7 @@ nav li:hover .underline{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: rgb(160, 52, 52);
     font-size: 2.3rem;
     flex-direction: column;
     padding: 15px;
@@ -128,8 +131,25 @@ nav li:hover .underline{
     position: relative;
     top: 0;
     z-index: -1;
+    max-width: 210vh;
+    max-height: 210vh;
 }
 
+
+.hero p{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    position: absolute;
+    bottom: 60px;
+    left: 0;
+    color: white;
+    text-decoration: underline;
+}
+
+.freepix-link a{
+    color: turquoise;
+}
 .Places-top{
     display: flex;
     justify-content: center;
@@ -137,17 +157,19 @@ nav li:hover .underline{
     top: -50px;
 }
 
+
 .Places-container-1{
     width: 100%;
     height: auto;
     margin: 0 auto;
     font-size: 2.4rem;
-    background-color: rgb(154, 247, 255);
-    background-image: linear-gradient(to bottom, rgba(240, 122, 122, 0.67), rgba(161, 210, 255, 0.325));
+    background-color: rgb(58, 72, 148);
+    background-image: linear-gradient(to bottom right, rgba(139, 45, 45, 0.67), rgba(56, 99, 139, 0.425));
     display: flex;
     justify-content: center;
 
 }
+
 .Places-coantainer-1-content{
     margin-top: 20px;
     display: flex;
@@ -156,8 +178,54 @@ nav li:hover .underline{
 }
 
 
-.box-content{
+.travel-row{
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    border: 3px solid black;
+}
+
+.box{
     display: flex;
     justify-content: center;
+    align-items: flex-start;
+    height: 400px;
+    width: 550px;
+    margin: 20px;
+    gap: 20px;
+    background-image: linear-gradient();
+    border-radius: 5px;
+    border: 2px solid black;
+}
+
+.box-content {
+    display: flex;
+    flex-direction: column;
     text-decoration: none;
+    color: blue;
+}
+
+.box-content img{
+    border: 2px solid whitesmoke;
+    border-radius: 1px;
+}
+
+/*
+@media only screen and (max-width: 1500px){
+    .row-1, .row-2, .row-3, .row-4{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        border: 4px solid black;
+    }
+}
+*/
+.row-1, .row-2, .row-3, .row-4{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin: 10px;
+    border: 4px solid black;
 }
