--- a/Engelsk Nettside/CSS/Plan Your Trip.css
+++ b/Engelsk Nettside/CSS/Plan Your Trip.css
@@ -212,7 +212,7 @@ nav li:hover .underline{
     border-radius: 1px;
 }
 
-/*
+/*Bent pls fiks*/
 @media only screen and (max-width: 1500px){
     .row-1, .row-2, .row-3, .row-4{
         display: flex;
@@ -221,7 +221,8 @@ nav li:hover .underline{
         border: 4px solid black;
     }
 }
-*/
+
+
 .row-1, .row-2, .row-3, .row-4{
     display: flex;
     justify-content: space-evenly;
