--- a/Engelsk Nettside/CSS/Plan Your Trip.css
+++ b/Engelsk Nettside/CSS/Plan Your Trip.css
@@ -191,8 +191,8 @@ nav li:hover .underline{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 400px;
-    width: 550px;
+    height: 550px;
+    width: 650px;
     margin: 20px;
     gap: 20px;
     background-image: linear-gradient();
@@ -210,23 +210,34 @@ nav li:hover .underline{
 .box-content img{
     border: 2px solid whitesmoke;
     border-radius: 1px;
+    max-width: 620px;
+    max-height: 500px;
+    margin-top: 13px;
 }
 
-/*Bent pls fiks*/
-@media only screen and (max-width: 1500px){
+.box-content h1{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    margin: 10px;
+    font-size: 2rem;
+    color: black;
+}
+
+/*Bent pls fiks*//*
+@media only screen and (max-width: 500px){
     .row-1, .row-2, .row-3, .row-4{
-        display: flex;
         flex-wrap: wrap;
         justify-content: center;
         border: 4px solid black;
     }
 }
+*/
 
-
-.row-1, .row-2, .row-3, .row-4{
+.row-1, .row-2, .row-3, .row-4, .row-5, .row-6{
     display: flex;
     justify-content: space-evenly;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     margin: 10px;
     border: 4px solid black;
 }
