--- a/Engelsk Nettside/CSS/Plan Your Trip.css
+++ b/Engelsk Nettside/CSS/Plan Your Trip.css
@@ -6,7 +6,7 @@
 
 body{
     min-height: 100vh;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     font-family: "Nunito", sans-serif;
 }
 
@@ -16,8 +16,9 @@ nav{
     position: sticky;
     top: 0;
     z-index: 5;
-    background-color: white;
-    box-shadow: 3px 3px 3px solid rgba(0, 0, 0, 0.3);
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(5px);
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
 
 nav ul{
@@ -48,7 +49,7 @@ nav a{
     height: 100%;
     display: flex;
     align-items: center;
-    color: #333;
+    color: black;
 }
 
 nav a:hover{
@@ -58,7 +59,7 @@ nav a:hover{
 nav li .underline{
     width: 100%;
     height: 2.5px;
-    background: rgba(191, 192, 192, 0.5);
+    background: rgba(211, 211, 211, 1);
     position: absolute;
     left: 0;
     bottom: 10px;
@@ -70,17 +71,14 @@ nav li .underline{
 nav li .solid-underline{
     width: 100%;
     height: 2.5px;
-    background: rgba(191, 192, 192, 0.5);
-    position: relative;
+    background: rgba(211, 211, 211, 1);
+    position: absolute;
     bottom: 10px;
 }
-
 
 nav li:hover .underline{
     transform: scaleX(1);
 }
-
-
 
 .hero{
     display: flex;
@@ -96,11 +94,11 @@ nav li:hover .underline{
     align-items: flex-start;
     width: auto;
     height: auto;
-    border-top: 1px solid rgba(205, 213, 255, 0.4);
-    border-left: 1px solid rgba(189, 205, 255, 0.3);
-    background-image: linear-gradient(to bottom right, rgba(21, 0, 212, 0.5), rgba(202, 35, 207, 0.3));
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.09);
-    backdrop-filter: blur(8px);
+    border-top: 2px solid rgba(255, 255, 255, 0.4);
+    border-left: 2px solid rgba(189, 205, 255, 0.3);
+    background-image: linear-gradient(to bottom right, rgba(41, 90, 78, 0.5), rgba(66, 181, 248, 0.3));
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(2px);
     margin-top: 100px;
     padding: 40px;
     border-radius: 10px;
@@ -112,7 +110,7 @@ nav li:hover .underline{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: rgb(160, 52, 52);
+    color: rgb(255, 255, 255);
     font-size: 2.3rem;
     flex-direction: column;
     padding: 15px;
@@ -150,69 +148,54 @@ nav li:hover .underline{
 .freepix-link a{
     color: turquoise;
 }
-.Places-top{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    top: -50px;
-}
 
 
-.Places-container-1{
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
-    font-size: 2.4rem;
-    background-color: rgb(58, 72, 148);
-    background-image: linear-gradient(to bottom right, rgba(139, 45, 45, 0.67), rgba(56, 99, 139, 0.425));
-    display: flex;
-    justify-content: center;
 
-}
-
-.Places-coantainer-1-content{
-    margin-top: 20px;
-    display: flex;
-
-
-}
-
-
-.travel-row{
+.travel-list{
     display: flex;
     flex-direction: column;
     top: 0;
     margin: 0;
     padding: 0;
-    border: 3px solid black;
+    background-image: url(../Bilder/CaliLandscape.jpg);
+    background-position: center;
+    background-attachment: fixed;
+    padding: 50px 0;
 }
 
 .box{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 550px;
-    width: 650px;
+    height: 680px;
+    width: 750px;
     margin: 20px;
     gap: 20px;
+    padding: 10px 5px;
     background-image: linear-gradient();
-    border-radius: 5px;
-    border: 2px solid black;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(3px);
+    border: 2px solid rgba(255, 170, 58, 0.6) ;
+
 }
 
 .box-content {
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    color: blue;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin: 10px;
 }
 
 .box-content img{
     border: 2px solid whitesmoke;
     border-radius: 1px;
-    max-width: 620px;
-    max-height: 500px;
-    margin-top: 13px;
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
 }
 
 .box-content h1{
@@ -221,7 +204,6 @@ nav li:hover .underline{
     text-decoration: none;
     margin: 10px;
     font-size: 2rem;
-    color: black;
 }
 
 /*
@@ -237,7 +219,14 @@ nav li:hover .underline{
 .row-1, .row-2, .row-3, .row-4, .row-5, .row-6{
     display: flex;
     justify-content: space-evenly;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     margin: 10px;
-    border: 4px solid black;
 }
+
+.travel-img img{
+    position: relative;
+    z-index: -1;
+    max-width: 210vh;
+    max-height: 210vh;
+}
+
