--- a/Engelsk Nettside/CSS/Info.css
+++ b/Engelsk Nettside/CSS/Info.css
@@ -83,6 +83,42 @@ nav li:hover .underline{
     transform: scaleX(1);
 }
 
+.hero{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    width: 100%;
+}
+
+
+.hero-underline{
+    position: relative;
+    width: 700px;
+    height: 70px;
+    background-color: none;
+    border-bottom: 10px solid #333;
+    border-left: 10px solid #333;
+    border-right: 10px solid #333;
+    border-image: linear-gradient(to bottom, transparent 50%,  #333 50%) 1;
+    border-image-slice: 1;
+    overflow: hidden;
+}
+
+.hero-content{
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Center text horizontally */
+    height: 100%; /* Full height of the hero-underline */
+    position: relative; /* To position text above the bottom line */
+    z-index: 1; /* Ensure the text appears above the underline */
+    font-size: 2rem;
+}
+
+
+
 
 .categorical{
     display: flex;
@@ -94,11 +130,12 @@ nav li:hover .underline{
 
 .categorical-box{
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: flex-start;
+    text-align: left;
+    flex-direction: column;
     width: 500px;
-    height: 700px;
-    border-radius: 10px;
+    height: 600px;
+    border-radius: 40px;
     background-color: rgb(149, 204, 226, 0.2);
     backdrop-filter: blur(1px);
     background-image: linear-gradient(to bottom right, rgba(159, 255, 239, 0.5), rgba(91, 203, 255, 0.85));
@@ -109,24 +146,42 @@ nav li:hover .underline{
 }
 
 .box-content{
-    margin: 50px;
-    max-width: 480px;
-    max-height: 650px;
     text-decoration: none;
 }
 
+.box-content h2, .button{
+    padding: 40px;
+}
+
+.box-content h2{
+    margin-top: 10px;
+    font-size: 2rem;
+
+}
 .box-content .button{
-    width: 150px;
+    width: 180px;
     height: 60px;
     border-radius: 50px;
     padding: 10px;
+    margin-top: 20px;
+    margin-left: 40px;
     background-color: rgb(255, 197, 88);
     background-image: linear-gradient(to right, rgb(255, 231, 94, 0.9), rgb(219, 153, 30, 0.8));
-    overflow: hidden;
+    border: rgb(240, 189, 94);
+    cursor: pointer;
 }
+
 
 .box-content .button a{
     font-size: 1.3rem;
     text-decoration: none;
     color: white;
+}
+
+.box-content img{
+    width: 500px;
+    height: 260px;
+    align-items: flex-start;
+    border-top-left-radius: 39px;
+    border-top-right-radius: 39px;
 }
