--- a/Engelsk Nettside/CSS/State signature.css
+++ b/Engelsk Nettside/CSS/State signature.css
@@ -6,7 +6,7 @@
 
 body{
     min-height: 100vh;
-    background-image: url(../Bilder/gray-texture.jpg);
+    background-image: url(../Bilder/ForestBG.jpg);
     background-size: cover; /* Fikserer bildet i midten av siden*/
     background-repeat: no-repeat;
     background-position: center;
@@ -81,4 +81,80 @@ nav li .solid-underline{
 
 nav li:hover .underline{
     transform: scaleX(1);
+}
+
+
+.back{
+    left: 50px;
+    top: 100px;
+    position: sticky;
+
+}
+
+.back-container{
+    width: 150px;
+    height: auto;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    margin: 10px;
+}
+
+.back-content a{
+    text-decoration: none;
+    color: black;
+    font-size: 1.2  rem;
+
+}
+
+
+.card-colum{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    margin-top: 20px;
+    padding: 0;
+}
+
+.card{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    background: rgb(255, 255, 255, 0.9);
+    backdrop-filter: blur(8px);
+    border-radius: 15px;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.3);
+    margin-bottom: 60px;
+    overflow: hidden;
+    width: 55%;
+    height: auto;
+    display: flex;
+
+}
+
+.card-content {
+    padding: 20px;
+    width: 800px;
+    font-size: 1.5rem;
+}
+
+.card-content h2, p{
+    margin-bottom: 15px;
+}
+
+.card-image {
+    margin-left: 100px;
+}
+
+.card-image img {
+    width: 850px;
+    height: auto; 
+    margin-bottom: 20px;
+    border-radius: 5px;
 }
