--- a/Engelsk Nettside/CSS/Fun-Facts.css
+++ b/Engelsk Nettside/CSS/Fun-Facts.css
@@ -83,6 +83,32 @@ nav li:hover .underline{
     transform: scaleX(1);
 }
 
+.back{
+    left: 50px;
+    top: 100px;
+    position: sticky;
+
+}
+
+.back-container{
+    width: 150px;
+    height: auto;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    margin: 10px;
+}
+
+.back-content a{
+    text-decoration: none;
+    color: black;
+    font-size: 1.2rem;
+
+}
+
 
 .hero{
     display: flex;
