--- a/Min Side/CSS/JavaScript.css
+++ b/Min Side/CSS/JavaScript.css
@@ -124,51 +124,71 @@ nav ul li .dropdown li a{
 
 
 
-.JS-Input{
+.JS-Input {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
     margin: 70px;
-
-
 }
 
-
-.box-frame{
+.box-frame {
     width: 370px;
-    height: 500px;
+    min-height: 500px;
     border: 2px rgba(255, 255, 255, 0.3);
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
-    background-image: linear-gradient(to bottom right,  rgba(250, 206, 49, 0.5), rgba(215, 102, 32, 0.8));
+    background-image: linear-gradient(to bottom right, rgba(250, 206, 49, 0.5), rgba(215, 102, 32, 0.8));
     border-radius: 5px;
-}
-
-.box-ui-content{
-    padding: 10px;
+    padding: 20px;
     display: flex;
-    justify-content: center;
-    padding: 3px;
-}
-.box-li-content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
 }
 
-.box-ui-content button{
-    border: none;
-    border-radius: 4px;
-    margin: 2px;
-    padding: 2px;
+.box-frame h1 {
+    font-size: 1.5rem;
+    color: white;
+    margin-bottom: 20px;
+    text-align: center;
 }
-.box-ui-content input{
-    border: none;
+
+.box-ui-content, .box-li-content, .box-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box-ui-content input, .box-ui-content button {
+    width: 80%;
+    margin: 5px 0;
+}
+
+.box-ui-content input {
     background-color: lightyellow;
+    border: none;
     border-radius: 4px;
     height: 40px;
-    width: 200px;
-    margin: 2px;
     padding: 4px;
     font-size: 1rem;
+}
+
+.box-ui-content button {
+    border: none;
+    border-radius: 4px;
+    padding: 10px;
+    background-color: rgba(41, 199, 243, 0.6);
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.box-ui-content button:hover {
+    background-color: rgba(41, 199, 243, 0.85);
+}
+
+.button-container{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    width: 80%;
 }
