--- a/Min Side/CSS/FotoSerie.css
+++ b/Min Side/CSS/FotoSerie.css
@@ -5,7 +5,8 @@
 
 body{
     min-height: 100vh;
-    background-image: url(../Bilder/Gradien\ Abstract\,\ Blue\ Purple.jpg);
+    background-color: rgb(197, 189, 189);
+    background-image: linear-gradient(to bottom, rgb(197, 189, 189), rgb(30, 30, 30));
     background-size: cover; /* Fikserer bildet i midten av siden*/
     background-repeat: no-repeat;
     background-position: center;
@@ -125,28 +126,34 @@ nav ul li .dropdown li a{
 
 }
 
+.fuckCSSdivcenter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-video{
-    margin-top: 100px;
-    width: 100vw;
+}
+iframe{
+    width: 80vw;
     height: 100vh;
-    border: white;
-    justify-items: center;
+    border: 1px solid white;
+    margin-top: 100px;
+
 }
 
 .bilde-serie{
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
-
+    margin-top: 100px;
 }
 
 .bilde-con{
     max-width: 90vw;
-    backdrop-filter: blur(2px);
-    background-image: linear-gradient(to bottom, );
+    margin-top: 50px;
+
 }
 .bilde-con img{
     max-width: 75vw;
-    max-height: 50%;
+    max-height: 100%;
 }
