--- a/Min Side/CSS/JavaScript.css
+++ b/Min Side/CSS/JavaScript.css
@@ -129,6 +129,7 @@ nav ul li .dropdown li a{
     justify-content: space-evenly;
     align-items: flex-start;
     margin: 70px;
+    flex-wrap: wrap;
 }
 
 .box-frame {
@@ -139,6 +140,7 @@ nav ul li .dropdown li a{
     background-image: linear-gradient(to bottom right, rgba(250, 206, 49, 0.5), rgba(215, 102, 32, 0.8));
     border-radius: 5px;
     padding: 20px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
